Fix table overflow

--- a/css/_pre.scss
+++ b/css/_pre.scss
@@ -20,7 +20,7 @@ pre {
   code {
     direction: ltr;
     * {
-      font-family: monospace;
+      font-family: $font-family-mono;
     }
   }
 }
